[tool.poetry]
name = "random-forest"
version = "0.1.0"
description = ""
authors = ["Celil SEKER <celil.seker@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
sklearn = "^0.0.post7"
openpyxl = "^3.1.2"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
